[package]
name = "minilock"
version = "0.1.0"
edition = "2024"
description = "Simplified single-file encryption tool (AES-256-GCM-SIV + hardcoded key)"
license = "MIT"
rust-version = "1.85"   # Edition 2024 requires Rust 1.85+

[dependencies]
aes-gcm-siv = "0.11"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true