[package]
name = "crypt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Grok"]
description = "Production-grade file encryption CLI using Argon2id + XChaCha20Poly1305"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["encryption", "cli", "security", "crypto"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
scopeguard = "1.2"
rand = "0.8"
rand_core = "0.6"
rpassword = "7.3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true